--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         featured: true,
         tags: ["10 cm", "14 g", "profundidad media"],
         desc: "Acción agresiva para buscar lobina. Ideal en presas y ríos.",
-        image: "assets/crankbait-10cm.jpg"
+        image: "assets/crankbait-10cm.jpg.webp"
       },
       {
         id: "cb12",
